# example_website_httk

./: .gitignore  Makefile  README.md  publish_static.py  pyproject.toml  serve_dynamic.py
.github/workflows/: httkweb.yaml
src/content/: 404.md  blog.md  contact.md  index.md
src/content/blogposts/: another_post.md  hello-everyone.md  third_post.md
src/functions/: init.py
src/templates/: 404.html.j2  base_default.html.j2  blog.html.j2  blogpost.html.j2  default.html.j2
